# FastRW

./: .gitmodules  CMakeLists.txt
include/: fastrw
include/fastrw_bits/: FastRW.hpp
simulations/: ParabolaLinear.cpp
